<resources>
    <string name="app_name">Arkanoid</string>
    <string name="start_button">Start</string>
    <string name="settings_button">Settings</string>
    <string name="settings_ok_button">Ok</string>
    <string name="settings_cancel_button">Cancel</string>
    <string name="hello_text">Lets get start</string>
    <string name="title_activity_game">GameActivity</string>
    <string name="speed_text">Speed:</string>
</resources>
